# polyglot-template

./: cookiecutter.json  readme.md
{{cookiecutter.proj_name}}/: .asdf.plugins  .cargo.tools  .editorconfig  .envrc  .formatter.exs  .gitattributes  .gitignore  .gutconfig.json  .lenvs  .opam  .pre-commit-config.yaml  .readthedocs.yaml  .related  .rustfmt.toml  .sdkmanrc  .shellcheckrc  .tool-versions  Cargo.toml  Directory.Build.props  Eask  LICENSE  VERSION.toml  _CoqProject  book.toml  build.gradle.kts  checklist.md  docfx.json  dokka-configuration.json  dokka.json  export_presets.cfg  gradle.properties  init.gradle.kts  init.tex.lua  mix.exs  nuget.config  polyglot.toml  project.godot  pyproject.toml  repo-layout.md  rust-toolchain.toml  (+5 more)
{{cookiecutter.proj_name}}/.github/workflows/: pages.yml  python-publish.yml  python-test.yml
{{cookiecutter.proj_name}}/.polyglot/: cargo-polyglot  lib-run.bash  lib-util.bash  mdbook-polyglot
{{cookiecutter.proj_name}}/.tasks/: cargo-alldocs  cargo-dispy  cargo-godot  cargo-init-dotnet  cargo-init-polyglot  cargo-install-dotnet  cargo-pg  cargo-polyglot  cargo-prolog  cargo-rocq  cargo-tex  conventional-commit-msg.py  install-asdf-plugins  jg.gradle.kts  lib-install.bash  lib-run.bash  lib-util.bash  local.pre.hook.py  local.pre.hook.sh  task-utils.bash
{{cookiecutter.proj_name}}/.tasks/lang-clingo/: run.bash
{{cookiecutter.proj_name}}/.tasks/lang-csound/: init.bash  run.bash
{{cookiecutter.proj_name}}/.tasks/lang-dotnet/: add-dep.bash
{{cookiecutter.proj_name}}/.tasks/lang-godot/: build.bash  git-fs-update.bash  run.bash  test.bash
{{cookiecutter.proj_name}}/.tasks/lang-kotlin/: keystore.bash
{{cookiecutter.proj_name}}/.tasks/lang-prolog/: run.bash
{{cookiecutter.proj_name}}/.tasks/lang-python/: add-dep.bash  add-to-workspace.bash  dispy.bash  lint.bash  poly-toml.bash  repl.bash  test.bash
{{cookiecutter.proj_name}}/.tasks/lang-rego/: run.bash
{{cookiecutter.proj_name}}/.tasks/lang-rocq/: run.bash
{{cookiecutter.proj_name}}/.tasks/lang-sclang/: run.bash
{{cookiecutter.proj_name}}/.tasks/lang-soar/: run.bash
{{cookiecutter.proj_name}}/.tasks/lang-tex/: bibtex-pass.bash  build.bash  luatex-pass.bash
{{cookiecutter.proj_name}}/.tasks/lang-z3/: run.bash
{{cookiecutter.proj_name}}/.tasks/task-build/: 0.help.bash  0a.check.bash  10.lang-python.bash  100.finalise.bash  11.lang-rust.bash  12.lang-dotnet.bash
{{cookiecutter.proj_name}}/.tasks/task-change/: 0.help.bash  1.towncrier.bash
{{cookiecutter.proj_name}}/.tasks/task-clean/: 0.help.bash  100.rm-tempdir.bash
{{cookiecutter.proj_name}}/.tasks/task-docs/: 0.help.bash  1.sphinx.bash  100.mdbook.bash  2.rustdoc.bash  200.combine.bash  3.exdoc.bash  4.docfx.bash  4.dotnet.bash  5.dokka.bash  6.doxygen.bash  7.rocq-doc.bash
{{cookiecutter.proj_name}}/.tasks/task-export/: 0.help.bash  1.tex.bash  2.asdf.bash
{{cookiecutter.proj_name}}/.tasks/task-init/: 0.help.bash  0.init-temp.bash  1.init-asdf.bash  1.tempdir.bash  10.init-docfx.bash  10.lang-python.bash  11.init-ocaml.bash  11.lang-rust.bash  12.init-rocq.bash  12.lang-dotnet.bash  13.init-sql.bash  13a.lang-jvm.bash  13b.lang-android.bash  14a.lang-ocaml.bash  14b.lang-rocq.bash  15.lang-elixir.bash  2.asdf.bash  2.defaults.bash  2.init-python.bash  20.doc-generators.bash  3.environment.bash  3.init-rust.bash  30.data-sql.bash  4.init-precommit.bash  40.tool-precommit.bash  5.init-tex.bash  6.init-dotnet.bash  7.init-jvm.bash  8.init-android.bash  9.init-dokka.bash
{{cookiecutter.proj_name}}/.tasks/task-release/: 0.help.bash  0a.check.bash  1.check-git.bash  100.finalise.bash  100.tag-git.bash  2.check-for-changes.bash  3.bump-version.bash  4.build-changelog.bash  4.changelog.bash  5.export.bash
{{cookiecutter.proj_name}}/.tasks/task-report/: 0.help.bash  1.export-asdf.bash  10.lang-dotnet.bash  11.lang-python.bash  12.lang-elixir.bash
{{cookiecutter.proj_name}}/.tasks/task-sync/: 0.help.bash  1.sync-dotnet.bash  4.sync-elixir.bash
{{cookiecutter.proj_name}}/.tasks/task-validate/: 10.validate.bash  20.docs.bash  30.utils.bash
{{cookiecutter.proj_name}}/.tasks/tool-docfx/: 0.help.bash
{{cookiecutter.proj_name}}/.tasks/tool-epub/: build.bash
{{cookiecutter.proj_name}}/.tasks/tool-fsm/: build.bash  compile.bash
{{cookiecutter.proj_name}}/.tasks/tool-manage/: polyglot-activate  polyglot-deactivate  polyglot-list  polyglot-manage
{{cookiecutter.proj_name}}/src/: .naming  .prefixes  .suffixes  index.rst
{{cookiecutter.proj_name}}/src/__notes/: ci.md  config_files.md  glossary.md  tasks.md  versioning.md
{{cookiecutter.proj_name}}/src/_book/: SUMMARY.md  overview.md  rs-c-lang.md  rs-lisp.md  rs-py.md
{{cookiecutter.proj_name}}/src/_changes/: index.rst
{{cookiecutter.proj_name}}/src/_data/: record.ledger
{{cookiecutter.proj_name}}/src/_docfx/: getting-started.md  index.md  introduction.md  toc.yml
{{cookiecutter.proj_name}}/src/_docs/: conf.py  overview.md  rs-c-lang.md  rs-lisp.md
{{cookiecutter.proj_name}}/src/_notes/: ci.md  csound.md  docs.md  dotnet.md  elixir.md  godot.md  kotlin.md  lisp.md  misc.md  octave.md  opa.md  prolog.md  python.md  rocq.md  rust.md  sclang.md  soar.md  tasks.md  testing.md  workspace.md
{{cookiecutter.proj_name}}/src/_sphinx/: conf.py  simple.pu  simple.rst
{{cookiecutter.proj_name}}/src/_tex/: event_chain.tex  local.bib  main.tex  newspaper.tex  sequents.tex  tableaux.tex
{{cookiecutter.proj_name}}/src/_utilities/: index.rst
{{cookiecutter.proj_name}}/src/asp_{{cookiecutter.proj_name}}/: basic.lp  other.lp
{{cookiecutter.proj_name}}/src/cs_exe/: Directory.Build.props  index.md  toc.yml  {{cookiecutter.proj_name}}.csproj
{{cookiecutter.proj_name}}/src/cs_lib/: index.md  toc.yml  {{cookiecutter.proj_name}}_lib.csproj
{{cookiecutter.proj_name}}/src/cs_{{cookiecutter.proj_name}}_exe/: {{cookiecutter.proj_name}}.csproj
{{cookiecutter.proj_name}}/src/csd_{{cookiecutter.proj_name}}/: main.csd
{{cookiecutter.proj_name}}/src/el/: Eask  {{cookiecutter.proj_name}}.el
{{cookiecutter.proj_name}}/src/ex_exe/: mix.exs
(+193 files in other folders)
