opam-version: "2.0"
compiler: [
  "base-bigarray.base"
  "base-domains.base"
  "base-effects.base"
  "base-nnp.base"
  "base-threads.base"
  "base-unix.base"
  "ocaml.5.4.0"
  "ocaml-base-compiler.5.4.0"
  "ocaml-compiler.5.4.0"
  "ocaml-config.3"
  "ocaml-options-vanilla.1"
]
roots: [
  "coq-mtac2.1.4+9.0"
  "coq-unicoq.1.6+8.20"
  "ocaml-base-compiler.5.4.0"
  "ocaml-lsp-server.1.24.0"
  "ocamlformat.0.28.1"
  "odoc.3.1.0"
  "rocq-prover.9.0.0"
  "utop.2.16.0"
]
installed: [
  "astring.0.8.5"
  "base.v0.17.3"
  "base-bigarray.base"
  "base-bytes.base"
  "base-domains.base"
  "base-effects.base"
  "base-nnp.base"
  "base-threads.base"
  "base-unix.base"
  "camlp-streams.5.0.1"
  "chrome-trace.3.20.2"
  "cmdliner.2.1.0"
  "conf-gmp.5"
  "conf-linux-libc-dev.0"
  "conf-pkg-config.4"
  "coq.9.0.1"
  "coq-core.9.0.1"
  "coq-mtac2.1.4+9.0"
  "coq-stdlib.9.0.0"
  "coq-unicoq.1.6+8.20"
  "coqide-server.9.0.1"
  "cppo.1.8.0"
  "crunch.4.0.0"
  "csexp.1.5.2"
  "dune.3.20.2"
  "dune-build-info.3.20.2"
  "dune-configurator.3.20.2"
  "dune-rpc.3.20.2"
  "dyn.3.20.2"
  "either.1.0.0"
  "fiber.3.7.0"
  "fix.20250919"
  "fmt.0.11.0"
  "fpath.0.7.3"
  "jsonrpc.1.24.0"
  "lambda-term.3.3.2"
  "logs.0.10.0"
  "lsp.1.24.0"
  "lwt.5.9.2"
  "lwt_react.1.2.0"
  "menhir.20250912"
  "menhirCST.20250912"
  "menhirLib.20250912"
  "menhirSdk.20250912"
  "merlin-lib.5.6-504"
  "mew.0.1.0"
  "mew_vi.0.5.0"
  "ocaml.5.4.0"
  "ocaml-base-compiler.5.4.0"
  "ocaml-compiler.5.4.0"
  "ocaml-config.3"
  "ocaml-index.5.6-504"
  "ocaml-lsp-server.1.24.0"
  "ocaml-options-vanilla.1"
  "ocaml-version.4.0.3"
  "ocaml_intrinsics_kernel.v0.17.1"
  "ocamlbuild.0.16.1"
  "ocamlc-loc.3.20.2"
  "ocamlfind.1.9.8"
  "ocamlformat.0.28.1"
  "ocamlformat-lib.0.28.1"
  "ocamlformat-rpc-lib.0.28.1"
  "ocp-indent.1.9.0"
  "ocplib-endian.1.2"
  "odoc.3.1.0"
  "odoc-parser.3.1.0"
  "ordering.3.20.2"
  "pp.2.0.0"
  "ppx_yojson_conv_lib.v0.17.0"
  "ptime.1.2.0"
  "re.1.14.0"
  "react.1.2.2"
  "result.1.5"
  "rocq-core.9.0.1"
  "rocq-prover.9.0.0"
  "rocq-runtime.9.0.1"
  "rocq-stdlib.9.0.0"
  "seq.base"
  "sexplib0.v0.17.0"
  "spawn.v0.17.0"
  "stdio.v0.17.0"
  "stdune.3.20.2"
  "topkg.1.1.1"
  "trie.1.0.0"
  "tyxml.4.6.0"
  "uchar.0.0.2"
  "utop.2.16.0"
  "uucp.17.0.0"
  "uuseg.17.0.0"
  "uutf.1.0.4"
  "xdg.3.20.2"
  "yojson.3.0.0"
  "zarith.1.14"
  "zed.3.2.3"
]
pinned: "rocq-prover.9.0.0"
